# tftf

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
claude-sonnet/model_pipe/: CLAUDE.md  README.md  pyproject.toml
claude-sonnet/model_pipe/model_pipe/: __init__.py  cli.py  pipeline.py
claude-sonnet/model_pipe/model_pipe.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
claude-sonnet/model_pipe/model_pipe/io/: null_writer.py  reader.py  sharded_reader.py  sharded_writer.py  writer.py
claude-sonnet/model_pipe/model_pipe/pipes/: _lora_base.py  base.py  dtype_cast.py  fp8_dequant.py  fsdp_lora_merge.py  key_filter.py  key_rename.py  lora_merge.py  passthrough.py
claude-sonnet/model_pipe/model_pipe/utils/: fp8.py  fsdp.py  lora.py
claude-sonnet/model_pipe/tests/: test_fp8.py  test_new_features.py  test_pipeline.py  test_writers_and_base.py
claude-sonnet/model_pipe/tftf/: cli.py
claude-sonnet/model_pipe/tftf.egg-info/: PKG-INFO  SOURCES.txt
claude-sonnet/model_pipe/tftf/io/: sharded_reader.py
claude-sonnet/model_pipe/tftf/pipes/: _lora_base.py  base.py  fp8_dequant.py  fsdp_lora_merge.py  key_filter.py  lora_merge.py  passthrough.py
claude-sonnet/model_pipe/tftf/utils/: fsdp.py
tests/: test_cli_run.py  test_dcp_lora_merge.py  test_dora_merge.py  test_fp8.py  test_key_filter.py  test_key_rename.py  test_moe_lora_merge.py  test_new_features.py  test_pipeline.py  test_sharded_reader.py  test_writers_and_base.py
tftf/: __init__.py  cli.py  pipeline.py
tftf.egg-info/: entry_points.txt  requires.txt
tftf/io/: null_writer.py  reader.py  sharded_reader.py  sharded_writer.py  writer.py
tftf/pipes/: _lora_base.py  base.py  dcp_lora_merge.py  dtype_cast.py  fp8_dequant.py  key_filter.py  key_rename.py  lora_merge.py
tftf/utils/: dcp.py  fp8.py  lora.py
