[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tftf"
version = "0.3.0"
description = "Streaming operations on HuggingFace .safetensors models"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["huggingface", "safetensors", "lora", "transformers", "streaming"]

dependencies = [
    "safetensors>=0.4",
    "torch>=2.0",
    "click>=8.1",
    "tqdm>=4.60",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov",
]

[project.scripts]
tftf = "tftf.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["tftf*"]

[tool.pytest.ini_options]
testpaths = ["tests"]


[tool.black]
# Only used by `hf-doc-builder´.
line-length = 119
target-version = ['py38']

[tool.ruff]
target-version = "py38"
line-length = 119

[tool.ruff.lint]
extend-select = [
    "C", # Complexity
    "E", # PEP8 errors
    "F", # PEP8 formatting
    "I", # Import sorting
    "UP", # Pyupgrade upgrades
    "W", # PEP8 warnings
    # "PT009", # Pytest assertions
]
ignore = [
    "C901", # Function too complex
    "E501", # Line length (handled by ruff-format)
    "UP007", # X | Y style Unions
]

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["peft"]

[tool.pytest]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "ELLIPSIS",
    "NUMBER",
]
