[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "model-pipe"
version = "0.1.0"
description = "Streaming operations on HuggingFace .safetensors models"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["huggingface", "safetensors", "lora", "transformers", "streaming"]

dependencies = [
    "safetensors>=0.4",
    "torch>=2.0",
    "click>=8.1",
    "tqdm>=4.60",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov",
]

[project.scripts]
model-pipe = "model_pipe.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["model_pipe*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
